<resources>
    <string name="app_name">Hupari Diary</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">हुपरी डायरी</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">होम पेज</string>
    <string name="menu_gallery">श्रेणी</string>
    <string name="menu_slideshow">आमच्याशी संपर्क साधा</string>
    <string name="category">श्रेणी</string>
    <string name="contact_us">आमच्याशी संपर्क साधा</string>
    <string name="click_here_to_go_to_category">go to category</string>
    <string name="toRegister">या अॅपमध्ये नोंदणी करण्यासाठी</string>
    <string name="krishna">कृष्णकांत पोवार</string>
    <string name="calltoreg">नोंदणी करण्यासाठी कॉल</string>
    <string name="developerContact">विकसक तपशील</string>
    <string name="callDev">विकासक कॉल करा</string>

    <string name="changLang">Change Language</string>
    <string name="hupari">हुपरी </string>
    <string name="info">हुपरी हे भारताच्या महाराष्ट्र राज्यातील कोल्हापूर जिल्ह्यातील एक जनगणना आहे. हुपरी हा हातकणंगले तालुक्यात येतो.हुपारी चांदीच्या दागिन्यांच्या उत्पादनासाठी प्रसिद्ध आहे. या शहरातील बहुतेक कुटुंबांमध्ये चांदीपासून कलात्मक दागदागिने विकसित करण्यासाठी वडिलोपार्जित कौशल्य आहे. </string>
    <string name="country">देश: भारत</string>
    <string name="state">राज्य: महाराष्ट</string>
    <string name="city">जिल्हा: कोल्हापूर</string>
    <string name="silver">भारताची चंदेरी नगरी : हुपरी</string>

    <string name="contDeatils">संपर्काची माहिती</string>
    <string name="address">पत्ता</string>
    <string name="call">कॉल करा</string>
    <string name="email">ई-मेल</string>
    <string name="description">माहिती </string>

    <string name="maps">नकाशा डायरेक्शन</string>
    <string name="rating">रेटिंग</string>








</resources>